# meine-stadt-transparent

./: .codeclimate.yml  .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  Changelog.md  Dockerfile  Dockerfile.build-context  Dockerfile.new  Pipfile  README.md  Readme.md  docker-compose.yml  docker-dev.yml  docker-select.yml  elasticsearch-on-docker.yml  elasticsearch-only.yml  gulpfile.js  init_data.json  kibana-on-docker.yml  kibana-only.yml  license  manage.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  readme.md  requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: docker-oparl-test.yml  docker.yml  lint.yml  main.yml  release-pypi.yml  test.yml
bedburg_transparent/: env-template  webpack.config.js
cms/: apps.py  models.py  tests.py  urls.py
cms/fixtures/: simple_page.json  user.json
cms/migrations/: 0001_initial.py  0002_auto_20190507_1532.py  0003_auto_20200507_1739.py  0004_auto_20200609_1640.py
cms/templates/: base_cms.html
customization_examples/bedburg_transparent/: webpack.config.js
customization_examples/juelich_transparent/: import_hooks.py
docs/: Customization.md  Design.md  Development.md  Import.md  nginx.conf
elasticsearch_admin/: apps.py  views.py
etc/: Dockerfile.oparl-test  apache.conf  deploy.sh  design.md  docker-compose.yml  docker-init.sh  env-docker-compose  env-template  env-test  gunicorn.conf.py  nginx-docker-compose.conf  nginx-http.conf  nginx.conf  oparl-test.env  template.env  test.env  webpack.config.common.js  webpack.config.dev.js  webpack.config.prod.js
etc/dev/: Readme.md  docker-compose.yml  meinestadttransparent-cert.pem  meinestadttransparent-key.pem  migration_wagtail.sql  nginx.conf  opensourceris-cert.pem  opensourceris-key.pem
etc/oparl-test/: Dockerfile  oparl-test.env  oparl_test_entrypoint.sh
etc/oparl-test-all/: Dockerfile  oparl-test-all.env  oparl_test_all_entrypoint.sh  test_all_endpoints.py
etc/run-configurations/: Meine Stadt Transparent.run.xml
importer/: Notes.md  __init__.py  admin.py  amenities.py  apps.py  city_to_ags.py  citytools.py  cli.py  functions.py  get_importer.py  import_json.py  importer.py  json_datatypes.py  json_to_db.py  loader.py  models.py  oparl_auto.py  oparl_cli.py  oparl_embedded.py  oparl_helper.py  oparl_import.py  oparl_import_helper.py  oparl_import_objects.py  oparl_importer.py  oparl_objects.py  oparl_resolve.py  oparl_utils.py  sternberg_import.py  utils.py
importer/fixtures/: cron.json  duplicate_meetings_some_id.json  duplicate_meetings_with_id.json  duplicate_meetings_without_id.json  file-analysis.json  import-anything.json
importer/migrations/: 0001_initial.py  0002_auto_20190108_2242.py
importer/test-data/: amtzell_new.json  amtzell_new_db.json  amtzell_old.json  amtzell_old_db.json  notification_request.json  notification_response.json
importer/testdata/: cc-egov-colon-after.json  cc-egov-colon-before.json
importer/tests/: test_cc_egov.py  test_cli.py  test_cron.py  test_dataset.py  test_file_analysis.py  test_functions.py  test_import_anything.py  test_import_json.py  test_json_to_db.py  test_missing.py  test_somacos.py  test_sternberg.py  test_update.py  test_workarounds.py  utils.py
juelich_transparent/: env-template
mainapp/: account_adapter.py  admin.py  apps.py  context_processors.py  documents.py  forms.py  initdata.json  middleware.py  search_indexes.py  urls.py  views.py  views_profile.py
mainapp/documents/: __init__.py  committee.py  department.py  file.py  generic_membership.py  index.py  meeting.py  organization.py  paper.py  parliamentary_group.py  person.py  utils.py
mainapp/fixtures/: .gitignore  cologne-pois-test.json  dummy_admin.json  initdata.json  search.json  socialapps.template.json
mainapp/functions/: amenities.py  city_to_ags.py  citytools.py  document_parsing.py  geo_functions.py  inject_accept_language.py  mail.py  minio.py  notify_users.py  search.py  search_expression.py  search_notification_tools.py  search_tools.py
mainapp/migrations/: 0001_custom_squashed_.py  0001_initial.py  0001_squashed_0055_file_mentioned_persons.py  0002_auto_20170910_1552.py  0002_auto_20171222_1521.py  0003_auto_20171222_1536.py  0003_departmentmembership.py  0004_auto_20170910_1826.py  0004_auto_20180112_1159.py  0005_auto_20170910_1851.py  0005_auto_20180112_1229.py  0006_agendaitem_title.py  0006_historicalagendaitem_historicalbody_historicalconsultation_historicalfile_historicallegislativeterm_.py  0007_auto_20170910_2032.py  0007_auto_20180208_0945.py  0008_auto_20170910_2033.py  0008_auto_20180216_0935.py  0009_auto_20170911_1201.py  0009_auto_20180216_1025.py  0010_auto_20170911_1858.py  0010_auto_20180216_1121.py  0011_auto_20180216_1226.py  0011_userprofile.py  0012_auto_20180216_1617.py  0012_site.py  0013_auto_20181005_1900.py  0013_meetingseries_short_name.py  0014_auto_20170924_2031.py  0014_userprofile_pgp_key_fingerprint.py  0015_auto_20170924_2100.py  0015_auto_20181116_1417.py  0016_auto_20170924_2101.py  0016_auto_20181202_2205.py  0016_auto_20181221_1432.py  0017_auto_20170924_2109.py  0017_merge_20181221_1508.py  0018_auto_20170924_2201.py  0018_auto_20181227_1526.py  0019_auto_20170924_2202.py  0019_auto_20181227_1534.py  (+51 more)
mainapp/models/: __init__.py  agenda_item.py  body.py  committee.py  committee_membership.py  consultation.py  default_fields.py  department.py  department_membership.py  file.py  generic_membership.py  has_created_and_modified.py  helper.py  legislative_term.py  location.py  meeting.py  meeting_series.py  membership.py  organization.py  organization_membership.py  organization_type.py  paper.py  paper_type.py  parliamentary_group.py  parliamentary_group_membership.py  person.py  search_poi.py  search_street.py  user_alert.py  user_profile.py
meine_stadt_transparent/: settings.py  settings_test.py  urls.py  wsgi.py
opensourceris/: local_settings.template.py  settings.py  urls.py  wsgi.py
testdata/: body_to_ags.json  broken_json.json  file.txt  wikidata_sparql_responses.json
(+393 files in other folders)
