[tool.poetry]
name = "meine-stadt-transparent"
version = "0.2.8"
description = "A website to bring municipal politics to citizens"
authors = ["Tobias Hößl <tobias@hoessl.eu>", "Konstantin Schütze <konstin@mailbox.org>"]
license = "MIT"
readme = "Readme.md"
include = ["mainapp/assets/bundles/**/*", "mainapp/migrations/*", "manage.py", "node_modules/pdfjs-dist/viewer/**/*"]
exclude = ["mainapp/assets/*"]
packages = [
    { include = "cms" },
    { include = "importer" },
    { include = "mainapp" },
    { include = "meine_stadt_transparent" },
]

[tool.poetry.dependencies]
Django = ">=3.0.8,<3.2.0"
django-allauth = ">=0.41,<0.43"
django-anymail = { version = "^7.0", extras = ["mailjet", "sendgrid"] }
django_csp = "^3.4"
django-elasticsearch-dsl = "~7.1.0"
django-environ = "^0.4"
django-geojson = "^3.0"
django-settings-export = "^1.2"
django-simple-history = "^2.3"
django-webpack-loader = ">=0.6,<0.8"
django-widget-tweaks = "^1.4"
elasticsearch-dsl = ">=7.1,<7.3"
geoextract = "^0.3.1"
geopy = "^2.0.0"
gunicorn = "^20.0"
html2text = ">=2019.8,<2021.0"
icalendar = "^4.0"
jsonfield = "^3.1"
mysqlclient = "^1.3"
pgpy = { version = "^0.5.2", optional = true }
PyPDF2 = "^1.26"
python = "^3.7"
python-slugify = "^4.0"
requests = "^2.22"
splinter = "^0.13.0"
Wand = "^0.6.0"
sentry-sdk = ">=0.16,<0.18"
minio = "^5.0"
tqdm = "^4.29"
python-dateutil = "^2.7"
wagtail = ">=2.9,<2.11"
django-decorator-include = ">=2.1,<4.0"
cattrs = { version = "^1.0.0", optional = true }
osm2geojson = "^0.1.28"

[tool.poetry.dev-dependencies]
selenium = "3.141.0"
tox = "^3.20"
django-debug-toolbar = "^2.0"
responses = "^0.12.0"
pytest-django = "^3.9"
black = "20.8b1"

[tool.poetry.extras]
pgp = ["pgpy"]
import-json = ["cattrs"]

[tool.poetry.scripts]
mst-manage = 'manage:main'

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.tox
  | mainapp/migrations
  | cms/migrations
  | importer/migrations
  | node_modules
  | static
)/
'''

[build-system]
requires = ["poetry~=1.0.0"]
build-backend = "poetry.masonry.api"
